--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,7 +7,7 @@
       <div class="footer-col">
         <ul class="contact-list">
           {% if site.author -%}
-            <li class="p-name">{{ site.author.name | escape }}</li>
+            <li class="p-name">{{ site.author | escape }}</li>
           {% endif -%}
           {% if site.author.email -%}
             <li><a class="u-email" href="mailto:{{ site.author.email }}">{{ site.author.email }}</a></li>
