--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,9 +14,9 @@
           {%- endif %}
         </ul>
       </div>
-      <div class="footer-col">
+      <!--- <div class="footer-col">
         <p>{{ site.description | escape }}</p>
-      </div>
+      </div> -->
     </div>
 
     <div class="social-links">
