--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,9 +14,13 @@
           {%- endif %}
         </ul>
       </div>
-      <!--- <div class="footer-col">
-        <p>{{ site.description | escape }}</p>
-      </div> -->
+      <!--- 
+      <div class="footer-col">
+        {% if site.description -%}
+          <p>{{ site.description | escape }}</p>
+        {% endif -%}
+      </div>
+      -->
     </div>
 
     <div class="social-links">
